# slackware-live

./: CMakeLists.txt
doc/: AUTHORS  COPYING-EN  COPYING-FR  ChangeLog  DEV-DOC-EN  DEV-DOC-FR  HOWTO-EN  HOWTO-FR  INSTALL-EN  INSTALL-FR  LICENCE-CeCILL-FR  LICENCE-FR  LICENSE-EN  README-EN  README-FR  TODO  doc.spip.tmp
init/: CMakeLists.txt  init  rc.6  rc.S
linomad/: CMakeLists.txt  autologin.c  inittab.linomad  rc.linomad-boot  rc.linomad-reboot
scripts/: CMakeLists.txt  build-slackware-live.sh  init  install-slackware-live.desktop  install-slackware-live.sh  load-optional-modules.desktop  load-optional-modules.sh  manage-optional-modules.sh
